RESOLVED FIXED173814
Fix some stale comments in Wasm code base
https://bugs.webkit.org/show_bug.cgi?id=173814
Summary Fix some stale comments in Wasm code base
Saam Barati
Reported 2017-06-24 17:07:38 PDT
I think we just moved to using a atomic Boolean
Attachments
patch (2.49 KB, patch)
2017-06-27 22:04 PDT, Saam Barati
no flags
Saam Barati
Comment 1 2017-06-27 22:04:22 PDT
Mark Lam
Comment 2 2017-06-27 22:06:45 PDT
Comment on attachment 313988 [details] patch r=me
JF Bastien
Comment 3 2017-06-27 22:07:58 PDT
Comment on attachment 313988 [details] patch r=me too
WebKit Commit Bot
Comment 4 2017-06-27 22:46:02 PDT
Comment on attachment 313988 [details] patch Clearing flags on attachment: 313988 Committed r218866: <http://trac.webkit.org/changeset/218866>
WebKit Commit Bot
Comment 5 2017-06-27 22:46:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.