Fix some stale comments in Wasm code base https://bugs.webkit.org/show_bug.cgi?id=173814

Reviewed by Mark Lam.

* wasm/WasmBinding.cpp:
(JSC::Wasm::wasmToJs):
* wasm/WasmOMGPlan.cpp:
(JSC::Wasm::runOMGPlanForIndex):


Canonical link: https://commits.webkit.org/190743@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218866 268f45cc-cd09-0410-ab3c-d52691b4dbfc